src/main/resources/deployment.yaml
apiVersion: apps/v1 
kind: Deployment    
metadata:              
  name: springboot-k8s
spec:                
  selector:         
    matchLabels:
      app: springboot-k8s
  replicas: 3        
  template:
    metadata:
      labels:        
        app: springboot-k8s
    spec:
      containers:
        - name: springboot-k8s
          image: soni23/sb-kubernetes-demo
          ports:
            - containerPort: 8080
