src/main/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
  labels:
    name: springboot-k8s
spec:
  ports:
    - nodePort: 30162 
      port: 80      
      targetPort: 8080  
      protocol: TCP
  selector:           
    app: springboot-k8s
  type: NodePort
