src/main/resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-example-new
spec:
  rules:
  - host: mykube.info
    http:
      paths:
      - path: /greeting
        backend:
          serviceName: springboot-k8s
          servicePort: 80
